--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,11 @@ extra_configs =
     user_setups/lcd_config.ini
     ; --  Base configurations per platform
     user_setups/esp32/_esp32.ini
-    ;user_setups/esp32s2/_esp32s2.ini
+    user_setups/esp32s2/_esp32s2.ini
     user_setups/esp32s3/_esp32s3.ini
-    ; --  Put active [env] files in this dir to be included in the build menu
-    user_setups/active/*.ini
-    ; --  Add customizations to this file only:
+    ; --  Put custom [env] files in this dir to be included in the build menu
+    user_setups/custom/*.ini
+    ; --  Add customizations to this file only (copy and rename the template):
     platformio_override.ini
 
 default_envs =
@@ -75,7 +75,7 @@ build_flags =
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=7
     ;-D HASP_VER_REV=4
-    -D HASP_VER_REV=0-rc3
+    -D HASP_VER_REV=0-rc4
     ;-D HASP_VER_REV=4-rc1
     ${override.build_flags}
 
