Fix ttgo-t7-v1_5_ili9341 environment name

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -60,8 +60,8 @@ extra_default_envs =
     ; ttgo_esp32_poe-ili9341
     ; ttgo-lilygo-pi_ili9481
     ; ttgo-lilygo-pi_st7796
-    ; ttgo-t7-v1.5_ili9341_16MB
-    ; ttgo-t7-v1.5_ili9341_4MB
+    ; ttgo-t7-v1_5_ili9341_16MB
+    ; ttgo-t7-v1_5_ili9341_4MB
     ; ttgo-esp32_tdisplay_v1
     ; wt32-sc01_16MB
     ; wt32-sc01_4MB
