Update ini files

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -58,8 +58,8 @@ extra_default_envs =
     ; nodemcu32s-raspi
     ; s2-mini-esp32s2_ili9341
     ; ttgo_esp32_poe-ili9341
-    ; ttgo-lilygo-pi_ili9481
-    ; ttgo-lilygo-pi_st7796
+    ; lilygo-lily-pi_ili9481
+    ; lilygo-lily-pi_st7796
     ; ttgo-t7-v1_5_ili9341_16MB
     ; ttgo-t7-v1_5_ili9341_4MB
     ; ttgo-esp32_tdisplay_v1
@@ -117,13 +117,11 @@ upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
 
 ;region -- Custom Environment configuration example -----------------
 [env:my_custom_build]
-extends = arduino_esp32_v2
+extends = arduino_esp32_v2, flash_4mb
 board = nodemcu-32s
 
 upload_port = COM12     ; To change the port, use platform_override.ini
 monitor_port = COM12    ; To change the port, use platform_override.ini
-
-board_build.partitions = user_setups/esp32/partitions_4MB.csv ; default.csv
 
 debug_tool = esp-prog
 debug_init_break = tbreak setup
