Add 4MB variant for Makerfabs ESP32 TFT Touch
My Makerfabs ESP32 TFT Touch, v1.1 on the silkscreen, purchased in
October 2020, has a 4MB flash as reported by esptool flash_id:
  Manufacturer: 20
  Device: 4016
  Detected flash size: 4MB

Add a makerfabs-tft35-cap_4MB variant, and rename makerfabs-tft35-cap to
makerfabs-tft35-cap_16MB.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Run PlatformIO
       run: pio run -e az-touch-mod-esp32_ili9341_4MB -e az-touch-mod-esp32_ili9341_8MB
     - name: Run PlatformIO
-      run: pio run -e makerfabs-tft35-cap
+      run: pio run -e makerfabs-tft35-cap_4MB -e makerfabs-tft35-cap_16MB
     - name: Run PlatformIO
       run: pio run -e yeacreate-nscreen32 -e
     - name: Run PlatformIO
