--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -53,7 +53,8 @@ extra_default_envs =
     ; m5stack-core2
     ; m5stack-tough
     ; makerfabs-s3-tft35-spi
-    ; makerfabs-tft35-cap
+    ; makerfabs-tft35-cap_16MB
+    ; makerfabs-tft35-cap_4MB
     ; makerfabs-tft-s2_ili9488
     ; nodemcu32s-raspi
     ; s2-mini-esp32s2_ili9341
