--- a/user_setups/esp32s3/sensecap-indicator.ini
+++ b/user_setups/esp32s3/sensecap-indicator.ini
@@ -85,7 +85,7 @@ lib_deps =
     ${arduino_esp32s3_v2.lib_deps}
     ${arduinogfx.lib_deps}
     ; ${ft6336.lib_deps}
-    git+https://github.com/RobTillaart/TCA9555.git
+    ; git+https://github.com/RobTillaart/TCA9555.git
 
 
 [env:sensecap-indicator-d1_8MB]
