--- a/user_setups/esp32s3/zw3d95ce01s_ar.ini
+++ b/user_setups/esp32s3/zw3d95ce01s_ar.ini
@@ -125,3 +125,46 @@ build_flags =
     -D I2S_SDI=39 ; I2S bus SDI
     -D I2C_SCL=6 ; I2C bus, used to configure CODEC, multiplexed peripherals
     -D I2C_SDA=7 ; I2C bus, used to configure CODEC, multiplexed peripherals
+
+[env:panlee-zw3d95ce01s-tr-4848_16MB]
+extends = panlee-zw3d95ce01s, flash_16mb
+build_flags =
+    -D HASP_MODEL="ZX3D95CE01S-TR-4848"
+    ${panlee-zw3d95ce01s.build_flags}
+    -D TOUCH_RST=-1 ; Using RC reset
+    -D TOUCH_SCL=6  ; touch I2C bus clock, multiplexed with external interface
+    -D TOUCH_SDA=15 ; Touch I2C bus data, multiplexed with external interface
+    -D TOUCH_INT=4  ; Touch interrupt
+    -D TFT_RST=41   ; LCD autoreset, use RGB_VS (TFT_VSYNC) signal to keep working
+    -D TFT_DC=-1
+    -D TFT_CS=38    ; LCD SPI bus CS
+    -D TFT_SCLK=45  ; LCD SPI bus SCLK
+    -D TFT_MOSI=48  ; LCD SPI bus MOSI
+    -D TFT_MISO=-1 ; LCD SPI bus MISO
+    -D TFT_DE=40    ; LCD RGB interface DE
+    -D TFT_VSYNC=41    ; LCD RGB interface VS
+    -D TFT_HSYNC=42    ; LCD RGB interface HS
+    -D TFT_PCLK=39  ; LCD RGB interface PCLK
+    -D TFT_B0=45    ; LCD RGB interface D0
+    -D TFT_B1=48    ; LCD RGB interface D1
+    -D TFT_B2=47    ; LCD RGB interface D2
+    -D TFT_B3=0     ; LCD RGB interface D3
+    -D TFT_B4=21    ; LCD RGB interface D4
+    -D TFT_G0=14    ; LCD RGB interface D5
+    -D TFT_G1=13    ; LCD RGB interface D6
+    -D TFT_G2=12    ; LCD RGB interface D7
+    -D TFT_G3=11    ; LCD RGB interface D8
+    -D TFT_G4=16    ; LCD RGB interface D9
+    -D TFT_G5=17   ; LCD RGB interface D10
+    -D TFT_R0=18   ; LCD RGB interface D11
+    -D TFT_R1=8    ; LCD RGB interface D12
+    -D TFT_R2=3    ; LCD RGB interface D13
+    -D TFT_R3=46   ; LCD RGB interface D14
+    -D TFT_R4=10    ; LCD RGB interface D15
+    -D TFT_BCKL=5   ; LCD backlight control, high level enable (datasheet states: 4, schematics states: 5 )
+    -D TFT_HSYNC_PULSE_WIDTH=10
+    -D TFT_HSYNC_BACK_PORCH=40
+    -D TFT_HSYNC_FRONT_PORCH=8
+    -D TFT_VSYNC_PULSE_WIDTH=10
+    -D TFT_VSYNC_BACK_PORCH=40
+    -D TFT_VSYNC_FRONT_PORCH=10
