--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -85,6 +85,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade platformio
+      - name: Install Setuptools
+        run: |
+          pip install --upgrade setuptools
       - name: Enable ESP32 platforms from platformio_override-template.ini
         run: |
           sed 's/; user_setups\/esp32/user_setups\/esp32/g' platformio_override-template.ini > platformio_override.ini
