--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,7 @@ build_flags =
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=7
     ;-D HASP_VER_REV=4
-    -D HASP_VER_REV=0-rc8
+    -D HASP_VER_REV=0-rc9
     ;-D HASP_VER_REV=4-rc1
     ${override.build_flags}
 
@@ -108,12 +108,12 @@ lib_deps =
 
 [arduinogfx]
 lib_deps =
-    ;moononournation/GFX Library for Arduino @ ^1.3.0
-    git+https://github.com/moononournation/Arduino_GFX.git
+    moononournation/GFX Library for Arduino@1.4.0
+    ;git+https://github.com/moononournation/Arduino_GFX.git
 
 [tft_espi]
 lib_deps =
-    bodmer/TFT_eSPI@2.5.0
+    bodmer/TFT_eSPI@2.5.34
     ;https://github.com/Bodmer/TFT_eSPI.git#master
 
 [goodix]
@@ -130,4 +130,4 @@ lib_deps =
 
 [stmpe610]
 lib_deps =
-    adafruit/Adafruit STMPE610@^1.1.4
+    adafruit/Adafruit STMPE610@^1.1.6
