Fix mac build: - Change compiler version so it works with newer MacOS - Fix library paths - Exclude freetype which creates a build error

--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -58,8 +58,10 @@ build_flags =
   -lm
   -lpthread
   ; MacOS with Homebrew
-  -I/usr/local/include
-  -L/usr/local/lib
+  ;-I/usr/local/include
+  ;-L/usr/local/lib
+  -I/opt/homebrew/include
+  -L/opt/homebrew/lib
   -DTARGET_OS_MAC=1
 
 lib_deps =
@@ -77,6 +79,7 @@ lib_ignore =
   ArduinoLog
   lv_lib_qrcode
   ETHSPI
+  freetype
 
 build_src_filter =
   +<*>
