Add modified init operations for esp32-s3-4848S040 #603

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -71,6 +71,7 @@ extra_default_envs =
     ; wt-86-32-3zw1
     ; yeacreate-nscreen32
     ; wz2432r028
+    ; esp32-s3-4848S040
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
