--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -228,15 +228,15 @@ build_flags =
     -D TFT_B4=4
     ; Panel Settings
     -D TFT_HSYNC_POLARITY=0
-    -D TFT_HSYNC_FRONT_PORCH=240  ; Maximum HSYNC Front Porch
-    -D TFT_HSYNC_PULSE_WIDTH=30   ; Typical HSYNC Pulse Width
-    -D TFT_HSYNC_BACK_PORCH=16    ; Typical HSYNC Back Porch
+    -D TFT_HSYNC_FRONT_PORCH=8  ; Maximum HSYNC Front Porch / 8 GOOD
+    -D TFT_HSYNC_PULSE_WIDTH=10   ; Typical HSYNC Pulse Width / 10 GOOD
+    -D TFT_HSYNC_BACK_PORCH=43    ; Typical HSYNC Back Porch / 43 GOOD
     -D TFT_VSYNC_POLARITY=0
-    -D TFT_VSYNC_FRONT_PORCH=32   ; Maximum VSYNC Front Porch
-    -D TFT_VSYNC_PULSE_WIDTH=13   ; Typical VSYNC Pulse Width
-    -D TFT_VSYNC_BACK_PORCH=10    ; Typical VSYNC Back Porch
+    -D TFT_VSYNC_FRONT_PORCH=8   ; Maximum VSYNC Front Porch / 8 GOOD
+    -D TFT_VSYNC_PULSE_WIDTH=8   ; Typical VSYNC Pulse Width / 8 GOOD
+    -D TFT_VSYNC_BACK_PORCH=12    ; Typical VSYNC Back Porch / 12 GOOD
     -D TFT_PCLK_ACTIVE_NEG=1
-    -D TFT_PREFER_SPEED=16000000  ; 1/2 of Typical DCLK Frequency
+    -D TFT_PREFER_SPEED=14500000  ; 1/2 of Typical DCLK Frequency / 12000000 GOOD
     -D TFT_AUTO_FLUSH=1
     ; Touch Settings
     -D TOUCH_WIDTH=800
