Add HASP_TARGET_ARDUINO and HASP_TARGET_PC macros

--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -6,7 +6,8 @@ extra_scripts =
   tools/linux_build_extra.py
 build_flags =
   ${env.build_flags}
-    -D HASP_MODEL="MacOS X App"
+  -D HASP_MODEL="MacOS X App"
+  -D HASP_TARGET_PC=1
 
   ; ----- Monitor
   -D TFT_WIDTH=240
