--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -35,6 +35,7 @@ files =
     
 build_flags =
     ${env.build_flags}
+    -D HASP_TARGET_ARDUINO=1
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D HASP_CONSOLE_BUFFER=256      ; maximum length of a console/telnet command
