--- a/user_setups/linux_sdl/linux_sdl_64bits.ini
+++ b/user_setups/linux_sdl/linux_sdl_64bits.ini
@@ -6,6 +6,7 @@ extra_scripts =
 build_flags =
   ${env.build_flags}
   -D HASP_MODEL="Linux App"
+  -D HASP_TARGET_PC=1
 
   ; ----- Monitor
   -D TFT_WIDTH=240
