Cleanup PC entrypoint, remove MQTT CLI options

--- a/user_setups/win32/windows_gdi_64bits.ini
+++ b/user_setups/win32/windows_gdi_64bits.ini
@@ -1,7 +1,6 @@
 [env:windows_gdi_64bits]
 platform = native@^1.1.4
 extra_scripts = 
-  tools/sdl2_build_extra.py
   tools/windows_build_extra.py
 build_flags =
   ${env.build_flags}
@@ -65,13 +64,12 @@ build_flags =
   -lrpcrt4
   -lcrypt32
   -lmingw32
-  -mwindows
   -lm
   -ldinput8
   ;-ldxguid
   ;-ldxerr8
   ;-luser32
-  ;-lgdi32
+  -lgdi32
   -lwinmm
   -limm32
   -lole32
