--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -72,13 +72,12 @@ build_flags =
   -lmingw32
   -lSDL2main
   -lSDL2
-  -mwindows
   -lm
   -ldinput8
   ;-ldxguid
   ;-ldxerr8
   ;-luser32
-  ;-lgdi32
+  -lgdi32
   -lwinmm
   -limm32
   -lole32
