--- a/user_setups/win32/windows_gdi_64bits.ini
+++ b/user_setups/win32/windows_gdi_64bits.ini
@@ -29,6 +29,7 @@ build_flags =
   -D HASP_USE_JPGDECODE=0
   -D HASP_USE_MQTT=1
   -D HASP_USE_SYSLOG=0
+  -D HASP_USE_LVGL_TASK=1
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
   -D IRAM_ATTR=                      ; No IRAM_ATTR available
