--- a/user_setups/linux_sdl/linux_fbdev_64bits.ini
+++ b/user_setups/linux_sdl/linux_fbdev_64bits.ini
@@ -1,7 +1,6 @@
-[env:linux_sdl_64bits]
+[env:linux_fbdev_64bits]
 platform = native@^1.1.4
 extra_scripts =
-  tools/sdl2_build_extra.py
   tools/linux_build_extra.py
 build_flags =
   ${env.build_flags}
@@ -14,11 +13,7 @@ build_flags =
   ; SDL drivers options
   ;-D LV_LVGL_H_INCLUDE_SIMPLE
   ;-D LV_DRV_NO_CONF
-  -D USE_MONITOR
-  -D MONITOR_ZOOM=1  ; can be fractional like 1.5 or 2
-  -D USE_MOUSE
-  -D USE_MOUSEWHEEL
-  -D USE_KEYBOARD
+  -D USE_FBDEV
   ; ----- ArduinoJson
   -D ARDUINOJSON_DECODE_UNICODE=1
   -D HASP_NUM_PAGES=12
@@ -49,12 +44,10 @@ build_flags =
   -DCMAKE_BUILD_TYPE=Release
   -DCMAKE_VERBOSE_MAKEFILE=TRUE
   ;-D NO_PERSISTENCE
-  -I.pio/libdeps/linux_sdl_64bits/paho/src
-  -I.pio/libdeps/linux_sdl_64bits/ArduinoJson/src
+  -I.pio/libdeps/linux_fbdev_64bits/paho/src
+  -I.pio/libdeps/linux_fbdev_64bits/ArduinoJson/src
 
-  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
   ; ----- Statically linked libraries --------------------
-  -lSDL2
   -lm
   -lpthread
 
@@ -76,12 +69,12 @@ lib_ignore =
 build_src_filter =
   +<*>
   -<*.h>
-  +<../.pio/libdeps/linux_sdl_64bits/paho/src/*.c>
-  +<../.pio/libdeps/linux_sdl_64bits/paho/src/MQTTClient.c>
-  -<../.pio/libdeps/linux_sdl_64bits/paho/src/MQTTAsync.c>
-  -<../.pio/libdeps/linux_sdl_64bits/paho/src/MQTTAsyncUtils.c>
-  -<../.pio/libdeps/linux_sdl_64bits/paho/src/MQTTVersion.c>
-  -<../.pio/libdeps/linux_sdl_64bits/paho/src/SSLSocket.c>
+  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/*.c>
+  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTClient.c>
+  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsync.c>
+  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTVersion.c>
+  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/SSLSocket.c>
   +<MQTTClient.c>
   -<MQTTAsync.c>
   -<MQTTAsyncUtils.c>
@@ -102,4 +95,4 @@ build_src_filter =
   +<lang/>
   -<log/>
   +<mqtt/>
-  +<../.pio/libdeps/linux_sdl_64bits/ArduinoJson/src/ArduinoJson.h>
+  +<../.pio/libdeps/linux_fbdev_64bits/ArduinoJson/src/ArduinoJson.h>
