Support evdev on Linux

--- a/user_setups/linux_sdl/linux_fbdev_64bits.ini
+++ b/user_setups/linux_sdl/linux_fbdev_64bits.ini
@@ -14,6 +14,7 @@ build_flags =
   ;-D LV_LVGL_H_INCLUDE_SIMPLE
   ;-D LV_DRV_NO_CONF
   -D USE_FBDEV
+  -D USE_EVDEV
   ; ----- ArduinoJson
   -D ARDUINOJSON_DECODE_UNICODE=1
   -D HASP_NUM_PAGES=12
