--- a/platformio.ini
+++ b/platformio.ini
@@ -108,7 +108,7 @@ lib_deps =
 
 [arduinogfx]
 lib_deps =
-    moononournation/GFX Library for Arduino@1.4.4
+    moononournation/GFX Library for Arduino@1.4.0  ; Update needs modification of custom PCA class
     ;git+https://github.com/moononournation/Arduino_GFX.git
 
 [tft_espi]
