Enable Paho Async MQTT client on PC build

--- a/user_setups/darwin_sdl/darwin_sdl_64bits.ini
+++ b/user_setups/darwin_sdl/darwin_sdl_64bits.ini
@@ -87,15 +87,14 @@ build_src_filter =
   +<*>
   -<*.h>
   +<../.pio/libdeps/darwin_sdl_64bits/paho/src/*.c>
-  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTClient.c>
-  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTClient.h>
-  -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsync.c>
-  -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsync.c>
+  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsyncUtils.c>
   -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTVersion.c>
   -<../.pio/libdeps/darwin_sdl_64bits/paho/src/SSLSocket.c>
-  +<MQTTClient.c>
-  -<MQTTAsync.c>
-  -<MQTTAsyncUtils.c>
+  -<MQTTClient.c>
+  +<MQTTAsync.c>
+  +<MQTTAsyncUtils.c>
   -<MQTTVersion.c>
   -<SSLSocket.c>
   -<sys/>
