--- a/user_setups/linux_sdl/linux_fbdev_64bits.ini
+++ b/user_setups/linux_sdl/linux_fbdev_64bits.ini
@@ -73,14 +73,14 @@ build_src_filter =
   +<*>
   -<*.h>
   +<../.pio/libdeps/linux_fbdev_64bits/paho/src/*.c>
-  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTClient.c>
-  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsync.c>
-  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsync.c>
+  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsyncUtils.c>
   -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTVersion.c>
   -<../.pio/libdeps/linux_fbdev_64bits/paho/src/SSLSocket.c>
-  +<MQTTClient.c>
-  -<MQTTAsync.c>
-  -<MQTTAsyncUtils.c>
+  -<MQTTClient.c>
+  +<MQTTAsync.c>
+  +<MQTTAsyncUtils.c>
   -<MQTTVersion.c>
   -<SSLSocket.c>
   -<sys/>
