--- a/user_setups/darwin/darwin_sdl.ini
+++ b/user_setups/darwin/darwin_sdl.ini
@@ -1,4 +1,4 @@
-[env:darwin_sdl_64bits]
+[env:darwin_sdl]
 lib_archive = false
 platform = native@^1.1.4
 extra_scripts =
@@ -49,8 +49,8 @@ build_flags =
   -DCMAKE_BUILD_TYPE=Release
   -DCMAKE_VERBOSE_MAKEFILE=TRUE
   ;-D NO_PERSISTENCE
-  -I.pio/libdeps/darwin_sdl_64bits/paho/src
-  -I.pio/libdeps/darwin_sdl_64bits/ArduinoJson/src
+  -I.pio/libdeps/darwin_sdl/paho/src
+  -I.pio/libdeps/darwin_sdl/ArduinoJson/src
   -I lib/ArduinoJson/src
   -I lib/lv_fs_if
   !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
@@ -85,12 +85,12 @@ lib_ignore =
 build_src_filter =
   +<*>
   -<*.h>
-  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/*.c>
-  -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTClient.c>
-  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsync.c>
-  +<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTAsyncUtils.c>
-  -<../.pio/libdeps/darwin_sdl_64bits/paho/src/MQTTVersion.c>
-  -<../.pio/libdeps/darwin_sdl_64bits/paho/src/SSLSocket.c>
+  +<../.pio/libdeps/darwin_sdl/paho/src/*.c>
+  -<../.pio/libdeps/darwin_sdl/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/darwin_sdl/paho/src/MQTTAsync.c>
+  +<../.pio/libdeps/darwin_sdl/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/darwin_sdl/paho/src/MQTTVersion.c>
+  -<../.pio/libdeps/darwin_sdl/paho/src/SSLSocket.c>
   -<MQTTClient.c>
   +<MQTTAsync.c>
   +<MQTTAsyncUtils.c>
@@ -112,4 +112,4 @@ build_src_filter =
   +<lang/>
   -<log/>
   +<mqtt/>
-  +<../.pio/libdeps/darwin_sdl_64bits/ArduinoJson/src/ArduinoJson.h>
+  +<../.pio/libdeps/darwin_sdl/ArduinoJson/src/ArduinoJson.h>
