--- a/user_setups/linux/linux_fbdev.ini
+++ b/user_setups/linux/linux_fbdev.ini
@@ -1,4 +1,4 @@
-[env:linux_fbdev_64bits]
+[env:linux_fbdev]
 platform = native@^1.1.4
 extra_scripts =
   tools/linux_build_extra.py
@@ -46,8 +46,8 @@ build_flags =
   -DCMAKE_BUILD_TYPE=Release
   -DCMAKE_VERBOSE_MAKEFILE=TRUE
   ;-D NO_PERSISTENCE
-  -I.pio/libdeps/linux_fbdev_64bits/paho/src
-  -I.pio/libdeps/linux_fbdev_64bits/ArduinoJson/src
+  -I.pio/libdeps/linux_fbdev/paho/src
+  -I.pio/libdeps/linux_fbdev/ArduinoJson/src
 
   ; ----- Statically linked libraries --------------------
   -lm
@@ -71,12 +71,12 @@ lib_ignore =
 build_src_filter =
   +<*>
   -<*.h>
-  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/*.c>
-  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTClient.c>
-  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsync.c>
-  +<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTAsyncUtils.c>
-  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/MQTTVersion.c>
-  -<../.pio/libdeps/linux_fbdev_64bits/paho/src/SSLSocket.c>
+  +<../.pio/libdeps/linux_fbdev/paho/src/*.c>
+  -<../.pio/libdeps/linux_fbdev/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/linux_fbdev/paho/src/MQTTAsync.c>
+  +<../.pio/libdeps/linux_fbdev/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/linux_fbdev/paho/src/MQTTVersion.c>
+  -<../.pio/libdeps/linux_fbdev/paho/src/SSLSocket.c>
   -<MQTTClient.c>
   +<MQTTAsync.c>
   +<MQTTAsyncUtils.c>
@@ -98,4 +98,4 @@ build_src_filter =
   +<lang/>
   -<log/>
   +<mqtt/>
-  +<../.pio/libdeps/linux_fbdev_64bits/ArduinoJson/src/ArduinoJson.h>
+  +<../.pio/libdeps/linux_fbdev/ArduinoJson/src/ArduinoJson.h>
