--- a/user_setups/win32/windows_sdl.ini
+++ b/user_setups/win32/windows_sdl.ini
@@ -1,4 +1,4 @@
-[env:windows_sdl_64bits]
+[env:windows_sdl]
 platform = native@^1.1.4
 extra_scripts = 
   tools/sdl2_build_extra.py
@@ -59,8 +59,8 @@ build_flags =
   -DCMAKE_BUILD_TYPE=Release
   -DCMAKE_VERBOSE_MAKEFILE=TRUE
   ;-D NO_PERSISTENCE
-  -I.pio/libdeps/windows_sdl_64bits/paho/src
-  -I.pio/libdeps/windows_sdl_64bits/ArduinoJson/src
+  -I.pio/libdeps/windows_sdl/paho/src
+  -I.pio/libdeps/windows_sdl/ArduinoJson/src
   -I lib/lv_fs_if
   -I lib/lv_datetime
   !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
@@ -106,12 +106,12 @@ lib_ignore =
 build_src_filter =
   +<*>
   -<*.h>
-  +<../.pio/libdeps/windows_sdl_64bits/paho/src/*.c>
-  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTClient.c>
-  +<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsync.c>
-  +<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsyncUtils.c>
-  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTVersion.c>
-  -<../.pio/libdeps/windows_sdl_64bits/paho/src/SSLSocket.c>
+  +<../.pio/libdeps/windows_sdl/paho/src/*.c>
+  -<../.pio/libdeps/windows_sdl/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/windows_sdl/paho/src/MQTTAsync.c>
+  +<../.pio/libdeps/windows_sdl/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/windows_sdl/paho/src/MQTTVersion.c>
+  -<../.pio/libdeps/windows_sdl/paho/src/SSLSocket.c>
   -<MQTTClient.c>
   +<MQTTAsync.c>
   +<MQTTAsyncUtils.c>
@@ -133,5 +133,5 @@ build_src_filter =
   +<lang/>
   -<log/>
   +<mqtt/>
-  +<../.pio/libdeps/windows_sdl_64bits/ArduinoJson/src/ArduinoJson.h>
+  +<../.pio/libdeps/windows_sdl/ArduinoJson/src/ArduinoJson.h>
   +<lib/lv_datetime>
