--- a/.github/workflows/build_linux.yaml
+++ b/.github/workflows/build_linux.yaml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         environments:
-          - linux_sdl_64bits
+          - linux_sdl
 
     steps:
       - uses: actions/checkout@v3
@@ -43,7 +43,7 @@ jobs:
       - name: Enable Linux platform from platformio_override.ini
         run: |
           sed -i 's/; user_setups\/linux/user_setups\/linux/g' platformio_override.ini
-          mkdir -p .pio/libdeps/linux_sdl_64bits/paho/src
+          mkdir -p .pio/libdeps/linux_sdl/paho/src
       - name: Install SDL2 library
         run: |
           sudo apt-get update
