--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -6,11 +6,11 @@
 [platformio]
 extra_configs =
     ; Uncomment or edit the lines to show more User Setups in the PIO sidebar
-    ; user_setups/darwin_sdl/*.ini
+    ; user_setups/darwin/*.ini
     ; user_setups/esp32/*.ini
     ; user_setups/esp32s2/*.ini
     ; user_setups/esp32s3/*.ini
-    ; user_setups/linux_sdl/*.ini
+    ; user_setups/linux/*.ini
     ; user_setups/stm32f4xx/*.ini
     ; user_setups/win32/*.ini
 
