--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -5,6 +5,7 @@ board_build.mcu = esp32s2
 
 build_flags =
     ${env.build_flags}
+    -D HASP_TARGET_ARDUINO=1
     -D HTTP_UPLOAD_BUFLEN=512      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D HASP_CONSOLE_BUFFER=256      ; maximum length of a console/telnet command
