--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -1,12 +1,11 @@
-[env:linux_sdl]
+[env:windows_sdl_64bits]
 platform = native@^1.1.4
-extra_scripts =
+extra_scripts = 
   tools/sdl2_build_extra.py
-  tools/linux_build_extra.py
+  tools/windows_build_extra.py
 build_flags =
   ${env.build_flags}
-  -D HASP_MODEL="Linux App"
-  -D HASP_TARGET_PC=1
+  -D HASP_MODEL="Windows App"
 
   ; ----- Monitor
   -D TFT_WIDTH=240
@@ -24,24 +23,34 @@ build_flags =
   -D HASP_NUM_PAGES=12
   -D HASP_USE_SPIFFS=0
   -D HASP_USE_LITTLEFS=0
-  -D LV_USE_FS_IF=1
   -D HASP_USE_EEPROM=0
-  -D HASP_USE_GPIO=0
-  -D HASP_USE_CONFIG=1
+  -D HASP_USE_GPIO=1
+  -D HASP_USE_CONFIG=0            ; Standalone application, as library
   -D HASP_USE_DEBUG=1
   -D HASP_USE_PNGDECODE=1
   -D HASP_USE_BMPDECODE=1
   -D HASP_USE_GIFDECODE=0
   -D HASP_USE_JPGDECODE=0
   -D HASP_USE_MQTT=1
+  -D HASP_USE_SYSLOG=0
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
   -D IRAM_ATTR=                      ; No IRAM_ATTR available
   -D PROGMEM=                      ; No PROGMEM available
+  
+  ; -- FreeType build options ------------------------
+  -D LV_USE_FT_CACHE_MANAGER=1            ; crashes without cache
+  -D LVGL_FREETYPE_MAX_FACES=64           ; max number of FreeType faces in cache
+  -D LVGL_FREETYPE_MAX_SIZES=4            ; max number of sizes in cache
+  -D LVGL_FREETYPE_MAX_BYTES=16384        ; max bytes in cache
+  -D LVGL_FREETYPE_MAX_BYTES_PSRAM=65536  ; max bytes in cache when using PSRAM
+
   ;-D LV_LOG_LEVEL=LV_LOG_LEVEL_INFO
   ;-D LV_LOG_PRINTF=1
   ; Add recursive dirs for hal headers search
-  -D POSIX
+  -D _WIN64
+  -D WINDOWS              ; We add this ourselves for code branching in hasp
+  -D WIN32_LEAN_AND_MEAN  ; exclude a bunch of Windows header files from windows.h
   -D PAHO_MQTT_STATIC
   -DPAHO_WITH_SSL=TRUE
   -DPAHO_BUILD_DOCUMENTATION=FALSE
@@ -49,14 +58,35 @@ build_flags =
   -DCMAKE_BUILD_TYPE=Release
   -DCMAKE_VERBOSE_MAKEFILE=TRUE
   ;-D NO_PERSISTENCE
-  -I.pio/libdeps/linux_sdl/paho/src
-  -I.pio/libdeps/linux_sdl/ArduinoJson/src
-
+  -I.pio/libdeps/windows_sdl_64bits/paho/src
+  -I.pio/libdeps/windows_sdl_64bits/ArduinoJson/src
+  -I lib/lv_fs_if
+  -I lib/lv_datetime
   !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
+  -mconsole
   ; ----- Statically linked libraries --------------------
+  -l"ws2_32"  ;windsock2
+  -lrpcrt4
+  -lcrypt32
+  -lmingw32
+  -lSDL2main
   -lSDL2
+  -mwindows
   -lm
-  -lpthread
+  -ldinput8
+  ;-ldxguid
+  ;-ldxerr8
+  ;-luser32
+  ;-lgdi32
+  -lwinmm
+  -limm32
+  -lole32
+  -loleaut32
+  ;-lshell32
+  -lversion
+  ;-luuid
+  -lsetupapi
+  ;-lhid
 
 lib_deps =
   ${env.lib_deps}
@@ -72,24 +102,24 @@ lib_ignore =
   ArduinoLog
   lv_lib_qrcode
   ETHSPI
-  
+
 build_src_filter =
   +<*>
   -<*.h>
-  +<../.pio/libdeps/linux_sdl/paho/src/*.c>
-  -<../.pio/libdeps/linux_sdl/paho/src/MQTTClient.c>
-  +<../.pio/libdeps/linux_sdl/paho/src/MQTTAsync.c>
-  +<../.pio/libdeps/linux_sdl/paho/src/MQTTAsyncUtils.c>
-  -<../.pio/libdeps/linux_sdl/paho/src/MQTTVersion.c>
-  -<../.pio/libdeps/linux_sdl/paho/src/SSLSocket.c>
-  -<MQTTClient.c>
-  +<MQTTAsync.c>
-  +<MQTTAsyncUtils.c>
+  +<../hal/sdl2>
+  +<../.pio/libdeps/windows_sdl_64bits/paho/src/*.c>
+  +<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTClient.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsync.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTVersion.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/SSLSocket.c>
+  +<MQTTClient.c>
+  -<MQTTAsync.c>
+  -<MQTTAsyncUtils.c>
   -<MQTTVersion.c>
   -<SSLSocket.c>
   -<sys/>
   +<sys/gpio/>
-  +<sys/svc/>
   -<hal/>
   +<drv/>
   -<drv/touch>
@@ -103,4 +133,5 @@ build_src_filter =
   +<lang/>
   -<log/>
   +<mqtt/>
-  +<../.pio/libdeps/linux_sdl/ArduinoJson/src/ArduinoJson.h>
+  +<../.pio/libdeps/windows_sdl_64bits/ArduinoJson/src/ArduinoJson.h>
+  +<lib/lv_datetime>
