Fix Guition ESP32-S3-4848S040

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -39,6 +39,7 @@ extra_default_envs =
     ; esp32-one_st7796
     ; esp32-s3-4827s043c_16MB
     ; esp32-s3-4827s043r_16MB
+    ; esp32-s3-4848S040_16MB
     ; esp32-s3-8048s043c_16MB
     ; esp32-touchdown
     ; freetouchdeck_4MB
@@ -77,7 +78,6 @@ extra_default_envs =
     ; wt-86-32-3zw1
     ; yeacreate-nscreen32
     ; wz2432r028
-    ; esp32-s3-4848S040
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
