--- a/user_setups/esp32s3/esp32-s3-4848S040.ini
+++ b/user_setups/esp32s3/esp32-s3-4848S040.ini
@@ -5,7 +5,7 @@
 ;               - gt911 touch controller            ;
 ;***************************************************;
 
-[esp32-s3-4848S040]
+[esp32-s3-4848s040]
 extends = arduino_esp32s3_v2
 board = esp32-s3-devkitc-1
 board_build.arduino.memory_type = qio_opi
@@ -82,5 +82,5 @@ lib_deps =
     ${arduinogfx.lib_deps}
     ${goodix.lib_deps}
 
-[env:esp32-s3-4848S040]
-extends = esp32-s3-4848S040, flash_16mb
+[env:esp32-s3-4848s040_16MB]
+extends = esp32-s3-4848s040, flash_16mb
