--- a/user_setups/esp32s3/esp32-s3-4848S040.ini
+++ b/user_setups/esp32s3/esp32-s3-4848S040.ini
@@ -1,5 +1,5 @@
 ;***************************************************;
-;         Generic T3E with TFT 3.95"                ;
+;         Generic Guition with TFT 3.95"                ;
 ;               - Custom esp32-s3 board             ;
 ;               - st7701s TFT                       ;
 ;               - gt911 touch controller            ;
