--- a/user_setups/esp32/esp32-2832s028.ini
+++ b/user_setups/esp32/esp32-2832s028.ini
@@ -16,7 +16,6 @@ build_flags =
 ;region -- TFT_eSPI build options ------------------------
     ; -D USER_SETUP_LOADED=1
     -D LGFX_USE_V1=1
-    -D ILI9341_DRIVER=1
     -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
@@ -28,7 +27,6 @@ build_flags =
     -D TFT_MISO=12
     -D TFT_BCKL=21
     -D SUPPORT_TRANSACTIONS
-    -D SPI_FREQUENCY=55000000
     -D SPI_READ_FREQUENCY=20000000
     -D TOUCH_OFFSET_ROTATION=0  ; 1=swap xy, 2=invert x, 4=inverty
 
@@ -47,6 +45,7 @@ lib_deps =
 extends = esp32-2432s028r, flash_4mb
 build_flags =
     ${esp32-2432s028r.build_flags}
+    -D ILI9341_DRIVER=1
     -D TOUCH_DRIVER=0x2046 ; XPT2606 Resistive touch panel driver
     -D HASP_USE_LGFX_TOUCH=1
     -D TOUCH_CS=33
@@ -56,6 +55,33 @@ build_flags =
     -D TOUCH_SDA=-1
     -D TOUCH_SCL=-1
     -D TOUCH_IRQ=36
+    -D SPI_FREQUENCY=55000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+
+; -- Debugging options -----------------------------
+;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
+
+lib_deps =
+    ${esp32-2432s028r.lib_deps}
+    ;${tft_espi.lib_deps}
+    ${lovyangfx.lib_deps}
+    ;${goodix.lib_deps}
+
+[env:esp32-2432s028r-st7789_4MB]
+extends = esp32-2432s028r, flash_4mb
+build_flags =
+    ${esp32-2432s028r.build_flags}
+    -D ST7789_DRIVER=1
+    -D TOUCH_DRIVER=0x2046 ; XPT2606 Resistive touch panel driver
+    -D HASP_USE_LGFX_TOUCH=1
+    -D TOUCH_CS=33
+    -D TOUCH_SCLK=25
+    -D TOUCH_MOSI=32
+    -D TOUCH_MISO=39
+    -D TOUCH_SDA=-1
+    -D TOUCH_SCL=-1
+    -D TOUCH_IRQ=36
+    -D SPI_FREQUENCY=24000000
     -D SPI_TOUCH_FREQUENCY=2500000
 
 ; -- Debugging options -----------------------------
