--- a/user_setups/esp32/esp32-2832s028.ini
+++ b/user_setups/esp32/esp32-2832s028.ini
@@ -92,3 +92,31 @@ lib_deps =
     ;${tft_espi.lib_deps}
     ${lovyangfx.lib_deps}
     ;${goodix.lib_deps}
+
+
+[env:esp32-2432s028r-ili9342_4MB]
+extends = esp32-2432s028r, flash_4mb
+build_flags =
+    ${esp32-2432s028r.build_flags}
+    -D ILI9342_DRIVER=1
+    -D INVERT_COLORS=1
+    -D TOUCH_DRIVER=0x2046 ; XPT2606 Resistive touch panel driver
+    -D HASP_USE_LGFX_TOUCH=1
+    -D TOUCH_CS=33
+    -D TOUCH_SCLK=25
+    -D TOUCH_MOSI=32
+    -D TOUCH_MISO=39
+    -D TOUCH_SDA=-1
+    -D TOUCH_SCL=-1
+    -D TOUCH_IRQ=36
+    -D SPI_FREQUENCY=55000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+
+; -- Debugging options -----------------------------
+;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
+
+lib_deps =
+    ${esp32-2432s028r.lib_deps}
+    ;${tft_espi.lib_deps}
+    ${lovyangfx.lib_deps}
+    ;${goodix.lib_deps}
