--- a/user_setups/esp32/esp32-2432s028.ini
+++ b/user_setups/esp32/esp32-2432s028.ini
@@ -46,6 +46,7 @@ extends = esp32-2432s028r, flash_4mb
 build_flags =
     ${esp32-2432s028r.build_flags}
     -D ILI9341_DRIVER=1
+    -D INVERT_COLORS=0
     -D TOUCH_DRIVER=0x2046 ; XPT2606 Resistive touch panel driver
     -D HASP_USE_LGFX_TOUCH=1
     -D TOUCH_CS=33
@@ -72,6 +73,7 @@ extends = esp32-2432s028r, flash_4mb
 build_flags =
     ${esp32-2432s028r.build_flags}
     -D ST7789_DRIVER=1
+    -D INVERT_COLORS=0
     -D TOUCH_DRIVER=0x2046 ; XPT2606 Resistive touch panel driver
     -D HASP_USE_LGFX_TOUCH=1
     -D TOUCH_CS=33
