--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -21,7 +21,8 @@ build_flags =
     -D HASP_USE_ARDUINOGFX=1
     -D HASP_LV_USE_SW_ROTATE=1
     -D TFT_BCKL=2
-;endregion
+    -D BACKLIGHT_FREQUENCY=2000
+ ;endregion
 
 lib_deps =
     ${arduino_esp32s3_v2.lib_deps}
