--- a/platformio.ini
+++ b/platformio.ini
@@ -82,7 +82,6 @@ build_flags =
 ; -- Shared library dependencies in all environments
 ; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
-    bblanchon/ArduinoJson@^6.21.5
     ;git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
@@ -101,6 +100,11 @@ lib_deps =
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
 
 build_src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
+
+
+[arduinojson]
+lib_deps =
+    bblanchon/ArduinoJson@^6.21.5
 
 [lovyangfx]
 lib_deps =
