--- a/user_setups/darwin/darwin_sdl.ini
+++ b/user_setups/darwin/darwin_sdl.ini
@@ -67,10 +67,10 @@ build_flags =
 
 lib_deps =
   ${env.lib_deps}
+  ${arduinojson.lib_deps}
   ; lv_drivers@~7.9.1
   ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/7d71907c1d6b02797d066f50984b866e080ebeed.zip
   https://github.com/eclipse/paho.mqtt.c.git
-  bblanchon/ArduinoJson@^6.21.5    ; Json(l) parser
   https://github.com/fvanroie/lv_drivers
   git+https://github.com/lvgl/lv_lib_png.git#release/v7
 
