--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -93,6 +93,7 @@ lib_ignore =
 
 lib_deps =
     ${env.lib_deps}
+    ${arduinojson.lib_deps}
     git+https://github.com/fvanroie/ConsoleInput.git#dev
     ; lorol/LittleFS_esp32@^1.0.6    ; for Arduino v1 only
     bxparks/AceButton@^1.10.1        ; GPIO button library
@@ -144,7 +145,8 @@ framework = arduino
 ; platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.08.01/platform-espressif32.zip
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
 ;;;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.11.01/platform-espressif32.zip
-platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
+platform = espressif32@5.3.0
 lib_ignore =
     ${esp32.lib_ignore}
     LittleFS_esp32    ; Not needed for Arduino v2
