--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -39,7 +39,7 @@ extra_default_envs =
     ; esp32-one_st7796
     ; esp32-s3-4827s043c_16MB
     ; esp32-s3-4827s043r_16MB
-    ; esp32-s3-4848S040_16MB
+    ; esp32-s3-4848s040_16MB
     ; esp32-s3-8048s043c_16MB
     ; esp32-touchdown
     ; freetouchdeck_4MB
