Disable HASP_USE_QRCODE on PC targets

--- a/user_setups/win32/windows_gdi.ini
+++ b/user_setups/win32/windows_gdi.ini
@@ -27,6 +27,7 @@ build_flags =
   -D HASP_USE_BMPDECODE=1
   -D HASP_USE_GIFDECODE=0
   -D HASP_USE_JPGDECODE=0
+  -D HASP_USE_QRCODE=0
   -D HASP_USE_MQTT=1
   -D HASP_USE_SYSLOG=0
   -D HASP_USE_LVGL_TASK=1
