--- a/user_setups/win32/windows_sdl.ini
+++ b/user_setups/win32/windows_sdl.ini
@@ -32,6 +32,7 @@ build_flags =
   -D HASP_USE_BMPDECODE=1
   -D HASP_USE_GIFDECODE=0
   -D HASP_USE_JPGDECODE=0
+  -D HASP_USE_QRCODE=0
   -D HASP_USE_MQTT=1
   -D HASP_USE_SYSLOG=0
   -D MQTT_MAX_PACKET_SIZE=2048
