--- a/user_setups/win32/windows_sdl.ini
+++ b/user_setups/win32/windows_sdl.ini
@@ -34,6 +34,7 @@ build_flags =
   -D HASP_USE_JPGDECODE=0
   -D HASP_USE_QRCODE=0
   -D HASP_USE_MQTT=1
+  -D HASP_USE_MDNS=0
   -D HASP_USE_SYSLOG=0
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
