--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -6,6 +6,11 @@ extra_scripts =
 build_flags =
   ${env.build_flags}
   -D HASP_MODEL="Windows App"
+  -D HASP_TARGET_PC=1
+
+  ; https://github.com/eclipse/paho.mqtt.c/pull/1453
+  -D WINVER=0x0600 
+  -D _WIN32_WINNT=0x0600
 
   ; ----- Monitor
   -D TFT_WIDTH=240
@@ -33,6 +38,7 @@ build_flags =
   -D HASP_USE_JPGDECODE=0
   -D HASP_USE_QRCODE=0
   -D HASP_USE_MQTT=1
+  -D HASP_USE_MDNS=0
   -D HASP_USE_SYSLOG=0
   -D MQTT_MAX_PACKET_SIZE=2048
   -D HASP_ATTRIBUTE_FAST_MEM=
