Fix for Windows64_sdl

--- a/user_setups/win32/windows_sdl_64bits.ini
+++ b/user_setups/win32/windows_sdl_64bits.ini
@@ -30,7 +30,7 @@ build_flags =
   -D HASP_USE_LITTLEFS=0
   -D HASP_USE_EEPROM=0
   -D HASP_USE_GPIO=1
-  -D HASP_USE_CONFIG=0            ; Standalone application, as library
+  -D HASP_USE_CONFIG=1            ; Standalone application, as library
   -D HASP_USE_DEBUG=1
   -D HASP_USE_PNGDECODE=1
   -D HASP_USE_BMPDECODE=1
@@ -113,20 +113,20 @@ lib_ignore =
 build_src_filter =
   +<*>
   -<*.h>
-  +<../hal/sdl2>
   +<../.pio/libdeps/windows_sdl_64bits/paho/src/*.c>
-  +<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTClient.c>
-  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsync.c>
-  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsyncUtils.c>
+  -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTClient.c>
+  +<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsync.c>
+  +<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTAsyncUtils.c>
   -<../.pio/libdeps/windows_sdl_64bits/paho/src/MQTTVersion.c>
   -<../.pio/libdeps/windows_sdl_64bits/paho/src/SSLSocket.c>
-  +<MQTTClient.c>
-  -<MQTTAsync.c>
-  -<MQTTAsyncUtils.c>
+  -<MQTTClient.c>
+  +<MQTTAsync.c>
+  +<MQTTAsyncUtils.c>
   -<MQTTVersion.c>
   -<SSLSocket.c>
   -<sys/>
   +<sys/gpio/>
+  +<sys/svc/>
   -<hal/>
   +<drv/>
   -<drv/touch>
