Lower BACKLIGHT_FREQUENCY to 100 #691

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -21,7 +21,7 @@ build_flags =
     -D HASP_USE_ARDUINOGFX=1
     -D HASP_LV_USE_SW_ROTATE=1
     -D TFT_BCKL=2
-    -D BACKLIGHT_FREQUENCY=2000
+    -D BACKLIGHT_FREQUENCY=100
  ;endregion
 
 lib_deps =
