--- a/user_setups/esp32s3/crowpanel-hmi.ini
+++ b/user_setups/esp32s3/crowpanel-hmi.ini
@@ -1,5 +1,5 @@
 ;***************************************************;
-;    Elecrow ESP32-S3 TFT 7.0"                      ;
+;    Elecrow ESP32-S3 HMI TFT 7.0" and 5.0"         ;
 ;          - Custom esp32-s3 board                  ;
 ;          - gt911 touch controller                 ;
 ;***************************************************;
@@ -81,11 +81,9 @@ extends = elecrow-esp32-s3-tft, flash_4mb
 
 build_flags =
     -D HASP_MODEL="Elecrow WZ8048C070"
-    -D HASP_LOG_LEVEL=LOG_LEVEL_VERBOSE
+    -D HASP_LOG_LEVEL=LOG_LEVEL_WARNING
     -D HASP_USE_CAPTIVE_PORTAL=0
   ;  -D HASP_USE_CUSTOM=1
-  ;  -D MQTT_TOPIC_CUSTOM="SmartPICoop"
-
 
     ${elecrow-esp32-s3-tft.build_flags}
     ${elecrow-tft-common-pins.build_flags}
@@ -121,3 +119,77 @@ build_flags =
 
 lib_deps =
     ${elecrow-esp32-s3-tft.lib_deps}
+
+
+[env:elecrow-s3-8048c050_4MB]
+; https://forum.elecrow.com/index.php?p=/discussion/585/esp32-hmi-demo-code-updated-compatible-with-new-version-of-esp32-package/
+extends = elecrow-esp32-s3-tft, flash_4mb
+
+build_flags =
+    -D HASP_MODEL="Elecrow WZ8048C050"
+    -D HASP_LOG_LEVEL=LOG_LEVEL_WARNING
+    -D HASP_USE_CAPTIVE_PORTAL=0
+    ; -D HASP_USE_CUSTOM=1
+
+    ${elecrow-esp32-s3-tft.build_flags}
+
+    ; Panel Settings
+    -D TFT_WIDTH=800
+    -D TFT_HEIGHT=480
+
+    ; Bus Settings - LovyanGFX Library
+    -D LGFX_USE_V1=1
+    -D RGB_DRIVER=1
+
+    -D TFT_DE=40
+    -D TFT_VSYNC=41
+    -D TFT_HSYNC=39
+    -D TFT_PCLK=0 
+
+    -D TFT_R0=45
+    -D TFT_R1=48
+    -D TFT_R2=47
+    -D TFT_R3=21
+    -D TFT_R4=14  
+    
+    -D TFT_G0=5
+    -D TFT_G1=6
+    -D TFT_G2=7
+    -D TFT_G3=15
+    -D TFT_G4=16
+    -D TFT_G5=4
+
+    -D TFT_B0=8
+    -D TFT_B1=3
+    -D TFT_B2=46  
+    -D TFT_B3=9
+    -D TFT_B4=1
+    
+    -D TFT_HSYNC_POLARITY=0
+    -D TFT_HSYNC_FRONT_PORCH=8
+    -D TFT_HSYNC_PULSE_WIDTH=4 
+    -D TFT_HSYNC_BACK_PORCH=43
+    -D TFT_VSYNC_POLARITY=0
+    -D TFT_VSYNC_FRONT_PORCH=8   
+    -D TFT_VSYNC_PULSE_WIDTH=4   
+    -D TFT_VSYNC_BACK_PORCH=12
+    -D TFT_PCLK_ACTIVE_NEG=1
+    -D TFT_PREFER_SPEED=16000000  
+    -D TFT_AUTO_FLUSH=1
+
+    -D TFT_PCLK_ACTIVE_NEG=1
+   
+    ; Touch Settings
+    -D HASP_USE_LGFX_TOUCH=1
+    -D TOUCH_WIDTH=800
+    -D TOUCH_HEIGHT=480
+    -D TOUCH_DRIVER=0x911
+    -D TOUCH_SCL=20
+    -D TOUCH_SDA=19
+    -D TOUCH_IRQ=-1
+    -D TOUCH_RST=-1
+    -D I2C_TOUCH_ADDRESS=0x5D 
+    -D I2C_TOUCH_FREQUENCY=400000
+
+lib_deps =
+    ${elecrow-esp32-s3-tft.lib_deps}    
