Add configuration for ThingPulse Color Kit Grande

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ extra_configs =
     user_setups/lcd_config.ini
     ; --  Base configurations per platform
     user_setups/esp32/_esp32.ini
+    user_setups/esp32/*.ini
     user_setups/esp32s2/_esp32s2.ini
     user_setups/esp32s3/_esp32s3.ini
     ; --  Put custom [env] files in this dir to be included in the build menu
