--- a/platformio.ini
+++ b/platformio.ini
@@ -70,7 +70,7 @@ build_flags =
     -D ARDUINOJSON_ENABLE_COMMENTS=1 ; enable comments
     ; -- StreamUtils build options ----------------------------
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
-    -D AUDIO_NO_SD_FS=0
+    ;-D AUDIO_NO_SD_FS=0
     -D SDFATFS_USED=1
     ; -- Hasp build options ----------------------------
     -D HASP_VER_MAJ=0
@@ -97,7 +97,7 @@ lib_deps =
     ; ------ Unused / Test libraries
     ;https://github.com/netwizeBE/TFT_eSPI.git
     ;crankyoldgit/IRremoteESP8266@^2.8.6
-    https://github.com/claws/BH1750
+    ; https://github.com/claws/BH1750 //custom code add.. light sensor
     ;Syslog@^2.0.0       ; Obsoleted
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
@@ -106,6 +106,7 @@ lib_deps =
     ;earlephilhower/ESP8266Audio@^1.9.7
     adafruit/Adafruit BusIO@^1.14.1
     ;Wire
+    ;greiman/SdFat@^2.2.3   
     esphome/ESP32-audioI2S@^2.0.7
 
 build_src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
