Fix backlight freq and suffix build target

--- a/user_setups/esp32s3/guition-jc4827w543.ini
+++ b/user_setups/esp32s3/guition-jc4827w543.ini
@@ -18,7 +18,6 @@ build_flags =
 ;region -- ArduinoGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX
     -D NV3041A_DRIVER
-    -D BACKLIGHT_FREQUENCY=50
  ;endregion
 
 lib_deps =
@@ -42,12 +41,12 @@ build_flags =
     -D TFT_WIDTH=480
     -D TFT_HEIGHT=272
 
-[guition-jc4827w543]
-extends = guition-esp32-s3-tft
+[guition-jc4827w543c]
+extends = guition-esp32-s3-tft, flash_4mb
 debug_tool = esp-builtin
 debug_build_flags = -Os # optimize for size
 build_flags =
-    -D HASP_MODEL="Guition ESP32-S3 JC4827W543"
+    -D HASP_MODEL="Guition ESP32-S3 JC4827W543C"
     ${guition-esp32-s3-tft.build_flags}
     ${guition-tft-common-pins.build_flags}
     ; Touch Settings
