--- a/user_setups/esp32s3/sensecap-indicator.ini
+++ b/user_setups/esp32s3/sensecap-indicator.ini
@@ -83,8 +83,7 @@ build_flags =
 
 lib_deps =
     ${arduino_esp32s3_v2.lib_deps}
-    ${arduinogfx.lib_deps}
-    ; ${ft6336.lib_deps}
+    moononournation/GFX Library for Arduino@1.4.0 ; Update needs modification of custom PCA class    ; ${ft6336.lib_deps}
     ; git+https://github.com/RobTillaart/TCA9555.git
 
 
