SDCard functions and configs for sunton-esp32

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -84,6 +84,14 @@ build_flags =
     -D TOUCH_MOSI=11
     -D TOUCH_CS=38
     -D TOUCH_IRQ=18
+    ; SD Card Settings
+    -D SD_CS=10
+    -D SPI_MOSI=11
+    -D SPI_MISO=13
+    -D SPI_SCK=12
+
+
+#endif
 
 
 [env:sunton-4827s043c_16MB]
