--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -90,7 +90,6 @@ build_flags =
     -D SPI_MISO=13
     -D SPI_SCK=12
 
-
 #endif
 
 
@@ -124,6 +123,11 @@ build_flags =
     -D TOUCH_RST=38
     -D I2C_TOUCH_ADDRESS=0x14 ; or 0x5D
     -D I2C_TOUCH_FREQUENCY=400000
+    ; SD Card Settings
+    -D SD_CS=10
+    -D SPI_MOSI=11
+    -D SPI_MISO=13
+    -D SPI_SCK=12
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
     ${goodix.lib_deps}
@@ -162,6 +166,11 @@ build_flags =
     -D TOUCH_RST=38
     -D I2C_TOUCH_ADDRESS=0x14 ; or 0x5D
     -D I2C_TOUCH_FREQUENCY=400000
+    ; SD Card Settings
+    -D SD_CS=10
+    -D SPI_MOSI=11
+    -D SPI_MISO=13
+    -D SPI_SCK=12
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
     ${goodix.lib_deps}
@@ -200,6 +209,11 @@ build_flags =
     -D TOUCH_RST=38
     -D I2C_TOUCH_ADDRESS=0x14 ; or 0x5D
     -D I2C_TOUCH_FREQUENCY=400000
+    ; SD Card Settings
+    -D SD_CS=10
+    -D SPI_MOSI=11
+    -D SPI_MISO=13
+    -D SPI_SCK=12
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
     ${goodix.lib_deps}
@@ -257,6 +271,11 @@ build_flags =
     -D TOUCH_RST=38
     -D I2C_TOUCH_ADDRESS=0x5d ; or 0x14
     -D I2C_TOUCH_FREQUENCY=400000
+    ; SD Card Settings
+    -D SD_CS=10
+    -D SPI_MOSI=11
+    -D SPI_MISO=13
+    -D SPI_SCK=12
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
     ${goodix.lib_deps}
