--- a/user_setups/esp32s3/guition-jc4827w543.ini
+++ b/user_setups/esp32s3/guition-jc4827w543.ini
@@ -41,7 +41,7 @@ build_flags =
     -D TFT_WIDTH=480
     -D TFT_HEIGHT=272
 
-[guition-jc4827w543c]
+[guition-jc4827w543c_4MB]
 extends = guition-esp32-s3-tft, flash_4mb
 debug_tool = esp-builtin
 debug_build_flags = -Os # optimize for size
