--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -15,7 +15,7 @@ build_flags =
     -D LV_ATTRIBUTE_FAST_MEM=
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     -D LV_USE_FS_IF=1
-    ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
+    -D LV_FS_PC_PATH='"/littlefs"'  ; this needs to match the vfs mount pount
 ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
 ; -- tft_espi build options ------------------------
