Add support for Waveshare ESP32-S3-Touch-LCD-4.3
Add suppor for ws_esp32_s3_touch_lcd_4p3 from post https://github.com/HASwitchPlate/openHASP/discussions/602

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -78,6 +78,7 @@ extra_default_envs =
     ; wt-86-32-3zw1
     ; yeacreate-nscreen32
     ; wz2432r028
+    ; ws_esp32_s3_touch_lcd_4p3
 ;endregion
 
 ;region -- Define your local COM ports for each environment ---
