--- a/user_setups/esp32s3/esp32-s3-4848S040.ini
+++ b/user_setups/esp32s3/esp32-s3-4848S040.ini
@@ -76,6 +76,10 @@ build_flags =
     -D I2C_TOUCH_FREQUENCY=400000
     -D I2C_TOUCH_ADDRESS=0x5D ; or 0x14
     -D I2C_TOUCH_PORT=1
+    ; USB GPIO - Only need to define these so that the pins do not
+    ; show up in the list of available GPIO
+    -D USB_TXD=43
+    -D USB_RXD=44
 ;endregion
 
 lib_deps =
