Add devcontainer configuration

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -22,7 +22,7 @@ build_flags =
 
 ;region -- Default Build Environments : Used when Build All ---
 extra_default_envs =
-    ; Uncomment specific environments or create extra:
+    ; Uncomment specific environments or create extra (copy names from square brackets in user_setups/*/*.ini):
     ; az-touch-mod-esp32_ili9341_4MB
     ; az-touch-mod-esp32_ili9341_8MB
     ; d1-mini-esp32_ili9341
@@ -64,6 +64,9 @@ extra_default_envs =
     ; makerfabs-tft35-cap_4MB
     ; makerfabs-tft-s2_ili9488
     ; nodemcu32s-raspi
+    ; panlee-zw3d95ce01s-ar-4848_16MB
+    ; panlee-zw3d95ce01s-tr-4848_16MB
+    ; panlee-zw3d95ce01s-ur-4848_16MB
     ; s2-mini-esp32s2_ili9341
     ; ttgo_esp32_poe-ili9341
     ; lilygo-lily-pi_ili9481
