Update build.yaml zip step

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -106,7 +106,7 @@ jobs:
       - name: Zip artifact for deployment
         if: github.ref != 'refs/heads/master'
         run: |
-          zip ${{ matrix.environment.out }}.zip "build_output/firmware/*.bin" -r
+          zip ${{ matrix.environment.out }}.zip build_output/firmware/*.bin -r
       - name: On Release, upload assets to that Release
         if: github.ref != 'refs/heads/master'
         uses: AButler/upload-release-assets@v3.0
