ifdef the noise reduction code so that it only gets compiled if required for devices that have a GT911 touch screen.

--- a/user_setups/esp32s3/esp32-s3-4848S040.ini
+++ b/user_setups/esp32s3/esp32-s3-4848S040.ini
@@ -67,6 +67,7 @@ build_flags =
     -D TFT_AUTO_FLUSH=1
     ; Touch Settings
     -D TOUCH_DRIVER=0x911
+;    -D NOISE_REDUCTION
     -D TOUCH_WIDTH=480
     -D TOUCH_HEIGHT=480
     -D TOUCH_SDA=19
