--- a/user_setups/esp32/esp32-2432s028.ini
+++ b/user_setups/esp32/esp32-2432s028.ini
@@ -26,6 +26,7 @@ build_flags =
     -D SUPPORT_TRANSACTIONS
     -D SPI_READ_FREQUENCY=20000000
     -D TOUCH_OFFSET_ROTATION=0  ; 1=swap xy, 2=invert x, 4=inverty
+    -D TFT_RGB_ORDER=0       ; Colour order Red-Green-Blue
 
     -D ESP32_2432S028R=1
 ;endregion
@@ -152,6 +153,7 @@ build_flags =
     ; -D USER_SETUP_LOADED=1
     -D LGFX_USE_V1=1
     -D ILI9341_DRIVER=1 ;
+    -D INVERT_COLORS=0
     -D TFT_ROTATION=6 ; 0=0, 1=90, 2=180 or 3=270 degree, Mirrors: 6, 5, 4, 3
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=240
