The addition of support for T-Panel (verified).

--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -5,11 +5,11 @@ board_build.mcu = esp32s3
 
 ps_ram =
     -DBOARD_HAS_PSRAM
-    -D HASP_USE_FREETYPE=1
-    -D LV_USE_FREETYPE=1
+    -D HASP_USE_FREETYPE=0
+    -D LV_USE_FREETYPE=0
 no_ps_ram =
-    -D HASP_USE_FREETYPE=1
-    -D LV_USE_FREETYPE=1
+    -D HASP_USE_FREETYPE=0
+    -D LV_USE_FREETYPE=0
 
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s3_v2]
@@ -18,4 +18,5 @@ framework = arduino
 ; platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.05.01/platform-espressif32.zip
 ; platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.08.01/platform-espressif32.zip
 ; platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
-platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
+; platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.10.03/platform-espressif32.zip
+platform = espressif32 @6.5.0
