--- a/user_setups/esp32s3/lilygo-t-panel.ini
+++ b/user_setups/esp32s3/lilygo-t-panel.ini
@@ -8,8 +8,13 @@
 
 [lilygo-t-panel]
 extends = arduino_esp32s3_v2
-board = esp32-s3-devkitc-1
-board_build.arduino.memory_type = qio_opi
+board = esp32s3_flash_16MB
+
+; board_build.memory_type = qio_opi ;Enable internal PSRAM
+board_build.memory_type = qio_qspi ;Enable external PSRAM
+
+board_upload.flash_size = 16MB 
+board_build.partitions = default_16MB.csv 
 
 build_flags =
     -D HASP_MODEL="Lilygo T-Panel v1.2"
@@ -17,8 +22,16 @@ build_flags =
     ${esp32s3.ps_ram}
     -DLILYGO_T_PANEL
     -D LILYGO_T_PANEL=1
-    ;-DARDUINO_USB_CDC_ON_BOOT
-	;-DUSE_USB_CDC_CONSOLE
+
+    -Wall ;all errors that everybody could agree on
+    -Wextra ;somebody agree on
+    ; -Werror ;Think of "Warning" as "Error".
+    ; -D CORE_DEBUG_LEVEL=1 ;Debug level 0-5
+    -D BOARD_HAS_PSRAM ;Enable external PSRAM
+    -D ARDUINO_USB_MODE=1
+    -D ARDUINO_USB_CDC_ON_BOOT=0 ;1 is to use the USB port as a serial port
+    -D ARDUINO_RUNNING_CORE=1       ; Arduino Runs On Core (setup, loop)
+    -D ARDUINO_EVENT_RUNNING_CORE=1 ; Events Run On Core
 
 ;region -- ArduinoGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX=1
@@ -49,27 +62,29 @@ build_flags =
     -D TFT_BCKL=14
 
     ; Touch Settings
+    -D TOUCH_MODULES_CST_MUTUAL
+    -D TOUCH_DRIVER=0x3240
     -D TOUCH_WIDTH=480
     -D TOUCH_HEIGHT=480
     -D TOUCH_SDA=17
     -D TOUCH_SCL=18
     -D TOUCH_INT=21
-    -D TOUCH_RST=4
+    -D TOUCH_RST=-1
     -D TOUCH_CS=-1
-    -D TOUCH_DRIVER=0x3240
-    ; -D TOUCH_IRQ=
-    ; -D I2C_TOUCH_FREQUENCY=
-    ; -D I2C_TOUCH_ADDRESS=
+    -D TOUCH_IRQ=TOUCH_INT
+    -D I2C_TOUCH_FREQUENCY=400000UL
+    -D I2C_TOUCH_ADDRESS=0x5A
     ; -D I2C_TOUCH_PORT=
+
+    -D LV_DISP_DEF_REFR_PERIOD=10
 
 ;endregion
 
 lib_deps =
     ${arduino_esp32s3_v2.lib_deps}
-;     moononournation/GFX Library for Arduino@1.4.0 ; Update needs modification of custom PCA class    ; ${ft6336.lib_deps}
-;     ; git+https://github.com/admarschoonen/TouchLib.git
-     ; moononournation/GFX Library for Arduino@1.4.0 ;
+    git+https://github.com/mmMicky/TouchLib.git
+     moononournation/GFX Library for Arduino@1.4.0 
 [env:lilygo-t-panel_16MB]
 extends = lilygo-t-panel, flash_16mb
-monitor_port = COM8 
-upload_port = COM8
+; monitor_port = COM8 
+; upload_port = COM8
