Updated settings for the Lanbon L9
* Fixed the TFT driver, bad reference to gfx object.
* Added setting for GFX parallel driver speed.
* Corrected touch drive to FT6336.

--- a/user_setups/esp32s3/lanbon_l9.ini
+++ b/user_setups/esp32s3/lanbon_l9.ini
@@ -26,6 +26,7 @@ build_flags =
     ;-D TFT_INVERSION_ON
     ;-D TFT_RGB_ORDER=0       ; Colour order Blue-Green-Red
     ;-D INVERT_COLORS=1       ; for inverted colors
+    -D SPI_FREQUENCY=16000000
 
     -D TFT_RST=-1
     -D TFT_CS=21
@@ -44,13 +45,13 @@ build_flags =
     ; Touch Setttings
     -D TOUCH_WIDTH=170
     -D TOUCH_HEIGHT=320
-    -D TOUCH_DRIVER=0x911
+    -D TOUCH_DRIVER=0x6336
     -D TOUCH_SCL=0
     -D TOUCH_SDA=35
     -D TOUCH_IRQ=-1
     -D TOUCH_RST=-1
-    -D I2C_TOUCH_ADDRESS=0x5d ; or 0x14
-    -D I2C_TOUCH_FREQUENCY=400000
+    -D I2C_TOUCH_ADDRESS=0x38
+    -D I2C_TOUCH_FREQUENCY=100000
 ;endregion
 
 ;region -- Library options -------------------------------
