Working setup for Lanbon L9
* Changed to Arduino_ESP32PAR8 bus driver.
* Fixed touch driver options, added missing port settings.
* Increased frequency of i2c to 400kHz.

--- a/user_setups/esp32s3/lanbon_l9.ini
+++ b/user_setups/esp32s3/lanbon_l9.ini
@@ -51,7 +51,8 @@ build_flags =
     -D TOUCH_IRQ=-1
     -D TOUCH_RST=-1
     -D I2C_TOUCH_ADDRESS=0x38
-    -D I2C_TOUCH_FREQUENCY=100000
+    -D I2C_TOUCH_PORT=1
+    -D I2C_TOUCH_FREQUENCY=400000
 ;endregion
 
 ;region -- Library options -------------------------------
@@ -61,6 +62,7 @@ lib_deps =
     ${arduino_esp32s3_v2.lib_deps}
     ${arduinogfx.lib_deps}
     ${goodix.lib_deps}
+    ${ft6336.lib_deps}
 
 lib_ignore =
     ${env.lib_ignore}
