--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -52,6 +52,7 @@ extra_default_envs =
     ; huzzah32-featherwing-35
     ; huzzah32-featherwing-35-v2
     ; huzzah32-v2-featherwing-35-v2
+    ; huzzah32-v2-featherwing-35
     ; lanbon_l8
     ; lanbon_l8_eth
     ; lilygo-lily-pi_ili9481
