Add missing SPI_FREQUENCY #836

--- a/user_setups/esp32s3/crowpanel-hmi.ini
+++ b/user_setups/esp32s3/crowpanel-hmi.ini
@@ -74,7 +74,8 @@ build_flags =
   -D TFT_DE=41
   -D TFT_VSYNC=40
   -D TFT_HSYNC=39
-  -D TFT_PCLK=0 
+  -D TFT_PCLK=0
+  -D SPI_FREQUENCY=40000000
 
 [env:elecrow-s3-8048c070_4MB]
 extends = elecrow-esp32-s3-tft, flash_4mb
